--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -21,14 +21,30 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y libyaml-cpp-dev
 
+      - name: Install build tools and dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y cmake libssl-dev
+
       - name: Install rang
         run: |
           git clone https://github.com/agauniyal/rang.git
           sudo cp -r rang/include/* /usr/local/include/
 
+      - name: Install reproc++
+        run: |
+          git clone https://github.com/DaanDeMeyer/reproc.git
+          cd reproc
+          git submodule update --init --recursive
+          mkdir build
+          cd build
+          cmake ..
+          make
+          sudo make install
+
       - name: Compile YAML Formatter
         run: |
-          g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs
+          g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++
 
       - name: Run YAML Formatter
         run: ./yamlformat
