--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -47,4 +47,4 @@ jobs:
           g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++
 
       - name: Run YAML Formatter
-        run: ./yamlformat
+        run: ./yamlformatter
