--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -44,7 +44,8 @@ jobs:
 
       - name: Compile YAML Formatter
         run: |
-          g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++
+          g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++ -I/usr/local/include/reproc++/
+
 
       - name: Run YAML Formatter
         run: ./yamlformatter
