--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -46,7 +46,9 @@ jobs:
 
       - name: Compile YAML Formatter
         run: |
-          g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++
+                - name: Compile YAML Formatter
+        run: |
+          g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++ -I/usr/local/include/reproc++
 
       - name: Run YAML Formatter
         run: ./yamlformatter
