--- a/.github/workflows/yaml.yaml
+++ b/.github/workflows/yaml.yaml
@@ -44,7 +44,7 @@ jobs:
 
       - name: Compile YAML Formatter
        
-        run: g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++ -I/usr/local/include/reproc++ -I/usr/local/include/reproc
+        run: g++ -std=c++17 -o yamlformatter yamlformat.cpp -lyaml-cpp -lstdc++fs -lreproc++ -I/usr/local/lib/cmake/reproc/
 
 
       - name: Run YAML Formatter
